--- a/Atividade1.ipynb
+++ b/Atividade1.ipynb
@@ -1394,6 +1394,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Impressões   \n",
+    "As impressões quando ao método de extração de ativos através do k-means foi meio confusa, pois fazendo outras análises ele não pegou os ativos que tinham os melhores sharpes mesmo que o critério usado para fazer os clusters do k-means seja o sharpe. Mas mesmo assim ele pegou ótimos ativos com risco relativamente baixo.\n",
+    "\n",
+    "Quando foi feito o portifólio os retornos dos ativos pareciam bem condizentes com os pesos que lhe foram atribuídos na metodologia dando um retorno incrível de 55%, porém quando fomos testar nosso portifólio nos dados de teste o resultado foi totalmente contrário tendo assim um prejuíso de 25% nas ações. O grupo acredita que muito desses pontos foram por conta do covid-19 e seu impactos nos ativos escolhidos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
